clean code, testes unitarios e variaveis de ambiente